tests/baselines/reference/FunctionDeclaration9_es6.errors.txt
<<<<<<< HEAD
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(1,10): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts (1 errors) ====
    function * foo() {
             ~
!!! error TS9001: 'generators' are not currently supported.
      var v = { [yield]: foo }
    }
=======
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(2,13): error TS1136: Property assignment expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(2,20): error TS1005: ',' expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts (3 errors) ====
    function * foo() {
      var v = { [yield]: foo }
                ~
!!! error TS1136: Property assignment expected.
                       ~
!!! error TS1005: ',' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
>>>>>>> prototypeAsync
